String字符串存放与常量池